--- a/landing_pages/custom.html
+++ b/landing_pages/custom.html
@@ -671,6 +671,10 @@
             width: 40px;
         }
 
+        .mt2021 .things-to-note-2 p {
+            font-size: 15px;
+        }
+
 
         .things-steps {
 
@@ -955,9 +959,8 @@
 
                             <div>
                                 <h6 class="px-3">PRICE</h6>
-                                <p class="px-3">Our custom design services
-                                    start at a rate of SGD 1,000
-                                    and above. </p>
+                                <p class="px-3">Our custom design service starts from S$1,000, inclusive of a
+                                    non-refundable S$300 design fee. </p>
                             </div>
                         </div>
                     </div>
@@ -970,8 +973,8 @@
                             </div>
                             <div>
                                 <h6 class="px-3">DEPOSIT</h6>
-                                <p class="px-3">For all custom-made items, a minimum
-                                    deposit of 50% will be required. </p>
+                                <p class="px-3">Upon confirmation of design, a minimum deposit of 50% based on the quote
+                                    will be required. </p>
                             </div>
                         </div>
                     </div>
@@ -984,8 +987,7 @@
                             </div>
                             <div>
                                 <h6 class="px-3">TIME-FRAME</h6>
-                                <p class="px-3">The crafting time normally takes 6-8 weeks
-                                    upon confirmation of design. </p>
+                                <p class="px-3">The crafting time normally takes 6-8 weeks from start to&nbsp;end. </p>
                             </div>
                         </div>
                     </div>
@@ -998,8 +1000,7 @@
                             </div>
                             <div>
                                 <h6 class="px-3">NON-REFUNDABLE</h6>
-                                <p class="px-3">All custom-made items are non-refundable at any
-                                    stage of the customisation process. </p>
+                                <p class="px-3">Upon collection, all custom-made items will not be refundable. </p>
                             </div>
 
                         </div>
