--- a/landing_pages/diamond.html
+++ b/landing_pages/diamond.html
@@ -749,6 +749,14 @@
       .slider-desc-box {
         height: 180px;
       }
+
+      .diamond-by-shape #diamonds-slider.owl-carousel .owl-nav .owl-prev {
+        left: -10px;
+      }
+
+      .diamond-by-shape #diamonds-slider.owl-carousel .owl-nav .owl-next {
+        right: -10px;
+      }
     }
   </style>
 
