--- a/landing_pages/engagement.html
+++ b/landing_pages/engagement.html
@@ -161,8 +161,14 @@
       text-align: center;
     }
 
-    .top8 {
-      padding-top: 8%;
+    .top12 {
+      padding-top: 12%;
+      text-align: center;
+    }
+
+    .plus-equal-images {
+      max-width: 50px;
+      margin: auto;
     }
 
     .mt2021 .row {
@@ -940,9 +946,9 @@ background: linear-gradient(97.93deg, #F7E2DD 42.94%, #E9F8FF 54.12%);
 
             </div>
           </div>
-          <div class="col-sm-3 top8 ">
+          <div class="col-sm-3 top12 ">
             <img src="https://www.michaeltrio.com/pub/media/0newengagementpage/M2-Engagement-Step123-150x150px-plus.png"
-              class="img-responsive">
+              class="plus-equal-images">
 
           </div>
           <div class="col-sm-6  box">
@@ -961,10 +967,10 @@ background: linear-gradient(97.93deg, #F7E2DD 42.94%, #E9F8FF 54.12%);
 
             </div>
           </div>
-          <div class="col-sm-3 top8 ">
+          <div class="col-sm-3 top12 ">
             <img
               src="https://www.michaeltrio.com/pub/media/0newengagementpage/M2-Engagement-Step123-150x150px--equals-.png"
-              alt="M2-Engagement---Step123---Equal-.png" class="img-responsive">
+              alt="M2-Engagement---Step123---Equal-.png" class="plus-equal-images">
 
           </div>
           <div class="col-sm-6 box ">
