--- a/landing_pages/wedding.html
+++ b/landing_pages/wedding.html
@@ -790,7 +790,7 @@
     <section class="wedding-bands py-5">
       <div class="container">
 
-        <h1 class="text-center">Wedding Bands</h1>
+        <!-- <h1 class="text-center">Wedding Bands</h1> -->
 
         <h3 class="text-center py-3">For Her</h3>
 
