--- a/3d/earrings.html
+++ b/3d/earrings.html
@@ -661,6 +661,25 @@
       min-width: 162px;
     }
 
+    .studs-nav select {
+      background-color: #fff;
+      border: 2px solid #9BB8D3;
+      width: 300px;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      border-radius: 5px;
+      color: #9BB8D3;
+      text-align: center;
+    }
+
+    .mt2021 .more {
+      display: none;
+    }
+
+    .mt2021 .text-lightblue {
+      color: var(--companyblue);
+    }
+
     @media (max-width: 1199.98px) {
 
       .diamond-image img {
@@ -832,7 +851,7 @@
         <div class="row ">
           <div class="col-xs-24">
 
-            <div class="studs-nav ">
+            <div class="studs-nav text-center hidden-xs">
 
               <a href="{{store url='jewellery/earrings/studs'}}" class="btn btn-blue-outline active"
                 role="button">Diamond Studs </a>
@@ -840,10 +859,22 @@
               <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline" role="button">Diamond
                 Pendants </a>
 
-              <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline " role="button">Wedding
+              <a href="{{store url='wedding-bands/classic/collection'}}" class="btn btn-blue-outline "
+                role="button">Wedding
                 Bands </a>
 
             </div>
+
+            <div class="studs-nav text-center visible-xs">
+              <select onchange="location = this.value;">
+                <option value="{{store url='jewellery/earrings/studs'}}" selected> Diamond Studs</option>
+                <option value="{{store url='jewellery/pendant/studs'}}"> Diamond Pendants</option>
+                <option value="{{store url='wedding-bands/classic/collection'}}"> Wedding Bands
+                </option>
+              </select>
+            </div>
+
+
           </div>
         </div>
       </div>
@@ -857,8 +888,20 @@
           <div class="col-sm-24 text-center">
             <h1>Round Solitaire Diamond Earrings in 14K White Gold</h1>
 
-            <p class="my-4 p-wrapper">Presenting the finest quality-cut diamond, Michael Trio's Round Solitaire Diamond
-              Earrings features an exquisite brilliance that goes beyond everyday accessories.</p>
+            <p class="my-4 p-wrapper hidden-xs">
+              Presenting the finest quality-cut diamond, Michael Trio's Round Solitaire Diamond
+              Earrings features an exquisite brilliance that goes beyond everyday accessories.
+            </p>
+
+            <p class="my-4 p-wrapper visible-xs">
+              Presenting the finest quality-cut diamond<span class="dots">...</span>
+              <span class="more">, Michael Trio's Round Solitaire Diamond
+                Earrings features an exquisite brilliance that goes beyond everyday accessories.
+              </span>
+              <span class="text-lightblue read-more">Read more</span>
+            </p>
+
+
 
           </div>
         </div>
@@ -874,8 +917,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EL2021',0)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Best Value</div>
-                <div><i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
 
@@ -885,8 +932,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EISI2021',1)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Great Value</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: H-I | Clarity: SI</div>
                 <div class="visible-xs"> Colour: H-I <br /> Clarity: SI</div>
               </div>
@@ -895,8 +946,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EGVS2021',2)">
               <div class="diamond-thumbnail bg-white  py-3">
-                <div class="diamond-quality"></i>Best Quality</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -933,8 +988,18 @@
         <div class="row ">
           <div class="col-sm-24 text-center">
             <h1>Round Cut Diamond Earrings in 18K White Gold</h1>
-            <p class="my-4 p-wrapper">Featuring pristine brilliance and pure elegance, the Round Cut Diamond Earrings
-              are the perfect pairing for any occasion.</p>
+
+            <p class="my-4 p-wrapper hidden-xs">
+              Featuring pristine brilliance and pure elegance, the Round Cut Diamond Earrings
+              are the perfect pairing for any occasion.
+            </p>
+            <p class="my-4 p-wrapper visible-xs">
+              Featuring pristine brilliance and pure elegance<span class="dots">...</span>
+              <span class="more">, the Round Cut Diamond Earrings
+                are the perfect pairing for any occasion.
+              </span>
+              <span class="text-lightblue read-more">Read more</span>
+            </p>
 
           </div>
         </div>
@@ -952,8 +1017,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EISI2020_NoItem',0)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Best Value</div>
-                <div><i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -961,8 +1030,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EISI2020',1)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Great Value</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: H-I | Clarity: SI</div>
                 <div class="visible-xs"> Colour: H-I <br /> Clarity: SI</div>
               </div>
@@ -971,8 +1044,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EGVS2020',2)">
               <div class="diamond-thumbnail bg-white  py-3">
-                <div class="diamond-quality"></i>Best Quality</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -1013,8 +1090,16 @@
         <div class="row ">
           <div class="col-sm-24 text-center">
             <h1>Princess Cut Diamond Earrings in 18K White Gold</h1>
-            <p class="my-4 ">Exquisite and unique, the Princess Cut Diamond Earrings showcase absolute symmetry and
+            <p class="my-4 p-wrapper hidden-xs">Exquisite and unique, the Princess Cut Diamond Earrings showcase
+              absolute symmetry
+              and
               glow.
+            </p>
+            <p class="my-4 p-wrapper visible-xs">Exquisite and unique, the Princess Cut<span class="dots">...</span>
+              <span class="more"> Diamond Earrings showcase absolute symmetry and
+                glow.
+              </span>
+              <span class="text-lightblue read-more">Read more</span>
             </p>
 
           </div>
@@ -1032,8 +1117,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EL2020_NoItem',0)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Best Value</div>
-                <div><i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -1041,8 +1130,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EL2020_NoItem',1)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Great Value</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: H-I | Clarity: SI</div>
                 <div class="visible-xs"> Colour: H-I <br /> Clarity: SI</div>
               </div>
@@ -1051,8 +1144,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EL2020',2)">
               <div class="diamond-thumbnail bg-white  py-3">
-                <div class="diamond-quality"></i>Best Quality</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -1107,7 +1204,8 @@
           <div class="col-sm-12 box my-5 ">
             <div>
               <h1>Custom-Made Solitaire Earrings</h1>
-              <p class="my-4 p-wrapper">At Michael Trio, we provide customisation services for your ideal earrings.
+              <p class="my-4 p-wrapper">
+                At Michael Trio, we provide customisation services for your ideal earrings.
                 Start personalising your very own Solitaire Earrings by selecting your preferred setting and diamond.
               </p>
 
@@ -1519,6 +1617,28 @@
 
       }
 
+    }
+
+    const readMore = document.getElementsByClassName('read-more');
+    for (let i = 0; i < readMore.length; i++) {
+      readMore[i].addEventListener('click', function () {
+
+        const para = readMore[i].closest('.p-wrapper');
+        var dots = para.querySelector(".dots");
+        var moreText = para.querySelector(".more");
+        var btnText = para.querySelector(".read-more");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+
+      });
     }
 
 
