--- a/3d/pendant.html
+++ b/3d/pendant.html
@@ -662,6 +662,25 @@
       min-width: 162px;
     }
 
+    .studs-nav select {
+      background-color: #fff;
+      border: 2px solid #9BB8D3;
+      width: 300px;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      border-radius: 5px;
+      color: #9BB8D3;
+      text-align: center;
+    }
+
+    .mt2021 .more {
+      display: none;
+    }
+
+    .mt2021 .text-lightblue {
+      color: var(--companyblue);
+    }
+
     @media (max-width: 1199.98px) {
 
       .diamond-image img {
@@ -828,37 +847,57 @@
       <img src="https://www.michaeltrio.com/pub/media/0newpendant/06.jpg" alt="" class="w-100 visible-xs">
     </section>
 
-    <section class="py-3">
+    <section class=" py-3">
       <div class="container">
         <div class="row ">
           <div class="col-xs-24">
 
-            <div class="studs-nav ">
+            <div class="studs-nav text-center hidden-xs">
 
               <a href="{{store url='jewellery/earrings/studs'}}" class="btn btn-blue-outline " role="button">Diamond
                 Studs </a>
 
               <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline active"
                 role="button">Diamond Pendants </a>
-              <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline " role="button">Wedding
+              <a href="{{store url='wedding-bands/classic/collection'}}" class="btn btn-blue-outline "
+                role="button">Wedding
                 Bands </a>
 
             </div>
+
+            <div class="studs-nav text-center visible-xs">
+              <select onchange="location = this.value;">
+                <option value="{{store url='jewellery/earrings/studs'}}"> Diamond Studs</option>
+                <option value="{{store url='jewellery/pendant/studs'}}" selected> Diamond Pendants</option>
+                <option value="{{store url='wedding-bands/classic/collection'}}"> Wedding Bands
+                </option>
+              </select>
+            </div>
+
           </div>
         </div>
       </div>
     </section>
 
 
-    <section class=" py-5">
+    <section class="bg-lightgrey py-5">
 
       <div class="container">
         <div class="row ">
           <div class="col-sm-24 text-center">
             <h1>Diamond Pendant in 14K White Gold</h1>
 
-            <p class="my-4 p-wrapper">Presenting the finest quality-cut diamond, Michael Trio's Round Solitaire Diamond
-              Pendant features an exquisite brilliance that goes beyond the everyday accessories.</p>
+            <p class="my-4 p-wrapper hidden-xs">
+              Presenting the finest quality-cut diamond, Michael Trio's Round Solitaire Diamond
+              Pendant features an exquisite brilliance that goes beyond the everyday accessories.
+            </p>
+            <p class="my-4 p-wrapper visible-xs">
+              Presenting the finest quality-cut diamond<span class="dots">...</span><span class="more">,
+                Michael Trio's Round Solitaire Diamond
+                Pendant features an exquisite brilliance that goes beyond the everyday accessories.
+              </span>
+              <span class="text-lightblue read-more">Read more</span>
+            </p>
 
           </div>
         </div>
@@ -874,8 +913,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PL2021',0)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Best Value</div>
-                <div><i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -883,8 +926,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PISI2021',1)">
               <div class="diamond-thumbnail bg-white py-3">
-                <div class="diamond-quality"> </i>Great Value</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: H-I | Clarity: SI</div>
                 <div class="visible-xs"> Colour: H-I <br /> Clarity: SI</div>
               </div>
@@ -893,8 +940,12 @@
 
             <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PGVS2021',2)">
               <div class="diamond-thumbnail bg-white  py-3">
-                <div class="diamond-quality"></i>Best Quality</div>
-                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="diamond-quality">
+                  <i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural
+                </div>
+                <div class="font-weight-bold ">
+
+                </div>
                 <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
                 <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
               </div>
@@ -943,6 +994,7 @@
               <h1>Customise Your Pendant</h1>
               <p class="my-4 p-wrapper">At Michael Trio, we provide customisation services for your ideal pendant. Start
                 personalising your very own Solitaire Pendant by selecting your preferred setting and diamond.</p>
+
               <a href="{{store url='contacts'}}" class="btn btn-blue large-btn " role="button">Customise
                 Here
               </a>
@@ -1125,6 +1177,28 @@
 
       }
 
+    }
+
+    const readMore = document.getElementsByClassName('read-more');
+    for (let i = 0; i < readMore.length; i++) {
+      readMore[i].addEventListener('click', function () {
+
+        const para = readMore[i].closest('.p-wrapper');
+        var dots = para.querySelector(".dots");
+        var moreText = para.querySelector(".more");
+        var btnText = para.querySelector(".read-more");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+
+      });
     }
 
 
