--- a/3d/wedding_3d.html
+++ b/3d/wedding_3d.html
@@ -110,13 +110,13 @@
       min-width: 217px;
     }
 
-    .btn-blue {
+    .mt2021 .btn-blue {
       color: var(--white) !important;
       background-color: var(--companyblue);
       transition: background-color 2s;
     }
 
-    .btn-blue:hover {
+    .mt2021 .btn-blue:hover {
       color: var(--white);
       background-color: var(--black);
 
@@ -660,6 +660,17 @@
       min-width: 162px;
     }
 
+    .studs-nav select {
+      background-color: #fff;
+      border: 2px solid #9BB8D3;
+      width: 300px;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      border-radius: 5px;
+      color: #9BB8D3;
+      text-align: center;
+    }
+
 
 
 
@@ -708,6 +719,16 @@
       border: 2px solid var(--darkblue);
       /* font-weight: 500; */
     }
+
+    .mt2021 .more {
+      display: none;
+    }
+
+    .mt2021 .text-lightblue {
+      color: var(--companyblue);
+    }
+
+
 
     @media (max-width: 1199.98px) {
 
@@ -883,18 +904,32 @@
           <div class="row ">
             <div class="col-xs-24">
 
-              <div class="studs-nav ">
+              <div class="studs-nav text-center hidden-xs">
 
-                <a href="{{store url='jewellery/earrings/studs'}}" class="btn btn-blue-outline " role="button">Diamond
-                  Studs </a>
+                <a href="{{store url='jewellery/earrings/studs'}}" class="btn btn-blue-outline " role="button">
+                  Diamond Studs
+                </a>
 
-                <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline" role="button">Diamond
-                  Pendants </a>
+                <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline" role="button">
+                  Diamond Pendants
+                </a>
 
-                <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline active"
-                  role="button">Wedding Bands </a>
+                <a href="{{store url='wedding-bands/classic/collection'}}" class="btn btn-blue-outline active"
+                  role="button">
+                  Wedding Bands
+                </a>
 
               </div>
+
+              <div class="studs-nav text-center visible-xs">
+                <select onchange="location = this.value;">
+                  <option value="{{store url='jewellery/earrings/studs'}}"> Diamond Studs</option>
+                  <option value="{{store url='jewellery/pendant/studs'}}"> Diamond Pendants</option>
+                  <option value="{{store url='wedding-bands/classic/collection'}}" selected> Wedding Bands
+                  </option>
+                </select>
+              </div>
+
             </div>
           </div>
         </div>
@@ -910,9 +945,16 @@
             <div class="col-sm-24 text-center">
               <h1>High Dome Wedding Bands </h1>
 
-              <p class="my-4 p-wrapper">
-                The High Dome Wedding Band is a timeless wedding band style that will last a lifetime. The domed cross
-                section portrays an effortless style and makes this wedding band perfect for everyday wear.
+              <p class="my-4 p-wrapper hidden-xs">
+                The High Dome Wedding Band is a timeless wedding band style that will last a lifetime. The domed
+                cross-section portrays an effortless style and makes this wedding band perfect for everyday wear.
+              </p>
+              <p class="my-4 p-wrapper visible-xs">
+                The High Dome Wedding Band is a timeless <span class="dots">...</span>
+                <span class="more">wedding band style that will last a lifetime. The domed
+                  cross-section portrays an effortless style and makes this wedding band perfect for everyday wear.
+                </span>
+                <span class="text-lightblue read-more">Read more</span>
               </p>
 
             </div>
@@ -939,7 +981,7 @@
 
 
               <div class="col-xs-24  ">
-                <h1 class="text-center  pt-4"> Choose Your Ring Width </h1>
+                <h1 class="text-center  pt-4"> Select Your Ring Width </h1>
               </div>
 
 
@@ -966,10 +1008,18 @@
             <div class="col-sm-24 text-center">
               <h1>Low Dome Wedding Bands</h1>
 
-              <p class="my-4 p-wrapper">
+              <p class="my-4 p-wrapper hidden-xs">
 
                 The Low Dome Wedding Band is a classic variation of the traditional High Dome Wedding Band. With lesser
                 materials between your fingers, this wedding band provides increased comfort.
+              </p>
+              <p class="my-4 p-wrapper visible-xs">
+
+                The Low Dome Wedding Band is a classic<span class="dots">...</span>
+                <span class="more"> variation of the traditional High Dome Wedding Band. With lesser
+                  materials between your fingers, this wedding band provides increased comfort.
+                </span>
+                <span class="text-lightblue read-more">Read more</span>
               </p>
 
             </div>
@@ -995,7 +1045,7 @@
 
 
               <div class="col-xs-24  ">
-                <h1 class="text-center  pt-4"> Choose Your Ring Width </h1>
+                <h1 class="text-center  pt-4"> Select Your Ring Width </h1>
               </div>
 
 
@@ -1020,9 +1070,16 @@
             <div class="col-sm-24 text-center">
               <h1>Flat Dome Wedding Bands </h1>
 
-              <p class="my-4 p-wrapper">
+              <p class="my-4 p-wrapper hidden-xs">
                 The Flat Dome Wedding Band features a flat smooth cylindrical shape with a defined edge. This wedding
                 band is perfect for those looking for a contemporary wedding band.
+              </p>
+              <p class="my-4 p-wrapper visible-xs">
+                The Flat Dome Wedding Band features a flat<span class="dots">...</span>
+                <span class="more"> smooth cylindrical shape with a defined edge. This wedding
+                  band is perfect for those looking for a contemporary wedding band.
+                </span>
+                <span class="text-lightblue read-more">Read more</span>
               </p>
 
             </div>
@@ -1049,7 +1106,7 @@
 
 
               <div class="col-xs-24  ">
-                <h1 class="text-center  pt-4"> Choose Your Ring Width </h1>
+                <h1 class="text-center  pt-4"> Select Your Ring Width </h1>
               </div>
 
 
@@ -1086,7 +1143,7 @@
           "SKU": "WR0001-2MM-18KW",
           "URL": "{{store url='wr0001-2mm-18kw'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0001-2mm-18kw.png"
@@ -1151,7 +1208,7 @@
           "SKU": "WR0001-2MM-18KY",
           "URL": "{{store url='wr0001-2mm-18ky'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0001-2mm-18ky.png"
@@ -1216,7 +1273,7 @@
           "SKU": "WR0001-2MM-18KR",
           "URL": "{{store url='wr0001-2mm-18kR'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0001-2mm-18kr.png"
@@ -1348,7 +1405,7 @@
           "SKU": "WR0002-2MM-18KW",
           "URL": "{{store url='wr0002-2mm-18kw'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0002-2mm-18kw.png"
@@ -1413,7 +1470,7 @@
           "SKU": "WR0002-2MM-18KY",
           "URL": "{{store url='wr0002-2mm-18ky'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0002-2mm-18ky.png"
@@ -1478,7 +1535,7 @@
           "SKU": "WR0002-2MM-18KR",
           "URL": "{{store url='wr0002-2mm-18kR'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0002-2mm-18kr.png"
@@ -1610,7 +1667,7 @@
           "SKU": "WR0003-2MM-18KW",
           "URL": "{{store url='wr0003-2mm-18kw'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0003-2mm-18kw.png"
@@ -1675,7 +1732,7 @@
           "SKU": "WR0003-2MM-18KY",
           "URL": "{{store url='wr0003-2mm-18ky'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0003-2mm-18ky.png"
@@ -1740,7 +1797,7 @@
           "SKU": "WR0003-2MM-18KR",
           "URL": "{{store url='wr0003-2mm-18kR'}}",
           "Size": "2mm",
-          "Price": "SG$532",
+          "Price": "SG$569",
           "ClassName": "mm2",
           "Selling": "Yes",
           "Image": "https://www.michaeltrio.com/pub/media/0classicWedding/wr0003-2mm-18kr.png"
@@ -1930,7 +1987,27 @@
 
     }
 
+    const readMore = document.getElementsByClassName('read-more');
+    for (let i = 0; i < readMore.length; i++) {
+      readMore[i].addEventListener('click', function () {
 
+        const para = readMore[i].closest('.p-wrapper');
+        var dots = para.querySelector(".dots");
+        var moreText = para.querySelector(".more");
+        var btnText = para.querySelector(".read-more");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+
+      });
+    }
 
 
   </script>
