--- a/landing_pages/home.html
+++ b/landing_pages/home.html
@@ -890,7 +890,7 @@
             </div>
         </section>
 
-        <section class="py-5">
+        <section class="py-5" style="display:none;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-24">
